--- a/.github/ISSUE_TEMPLATE/request-removal.yaml
+++ b/.github/ISSUE_TEMPLATE/request-removal.yaml
@@ -26,7 +26,7 @@ body:
     attributes:
       label: Hotspot b58 Address
       description: What is the address of your Hotspot?
-      placeholder: ex. tiny-bronze-caterpillar
+      placeholder: ex. 112ui8pK1pmkeTiNxLNqJiwjUkSobo6gf6PnB15Tw7iA4orN9B2j
     validations:
       required: true
 
@@ -52,7 +52,7 @@ body:
     id: reason
     attributes:
       label: Removal Reason
-      description: What should this Hotspot be removed from the denylist?
+      description: Why should this Hotspot be removed from the denylist?
       placeholder: ex. I used to do things that were not for creating coverage but I stopped. Please save me.
     validations:
       required: true
@@ -70,7 +70,7 @@ body:
     id: modifications
     attributes:
       label: Modifications
-      description: Have you modified your Hotspot in anyway? If yes, please describe the modifications below.
+      description: Have you modified your Hotspot in anyway? If yes, please describe in the additional information box below.
       options:
         - Yes
         - No
@@ -81,7 +81,7 @@ body:
     id: extra-forwarder
     attributes:
       label: Extra forwarders
-      description: Are you using one or more extra forwarder(s)?
+      description: Are you using one or more extra forwarder(s)? If yes, please describe why in the additional information box below.
       options:
         - Yes
         - No
@@ -92,7 +92,7 @@ body:
     id: extra-antennas
     attributes:
       label: Extra antennas
-      description: Do you have multiple antennas attached to one Hotspot?
+      description: Do you have multiple antennas attached to one Hotspot? If yes, please describe why in the additional information box below.
       options:
         - Yes
         - No
@@ -102,7 +102,7 @@ body:
   - type: textarea
     id: description
     attributes:
-      label: Description
-      description: Include photo(s) of your Hotspot and describe your setup
+      label: Additional Information
+      description: Include photo(s) of your Hotspot, describe your setup, and include any additional information
     validations:
       required: false
