--- a/.github/ISSUE_TEMPLATE/request-removal.yaml
+++ b/.github/ISSUE_TEMPLATE/request-removal.yaml
@@ -1,9 +1,9 @@
 
 name: Request Removal from Denylist
-about: Fill out this form to request a Hotspot removal from the denylist
+description: Fill out this form to request a Hotspot removal from the denylist
 title: "[Removal]: "
 labels: ["removal", "triage"]
-assignees: ''
+assignees: []
 body:
   - type: markdown
     attributes:
