--- a/.github/ISSUE_TEMPLATE/request-removal.yaml
+++ b/.github/ISSUE_TEMPLATE/request-removal.yaml
@@ -83,8 +83,8 @@ body:
       label: Extra forwarders
       description: Are you using one or more extra forwarder(s)? If yes, please describe why in the additional information box below.
       options:
-        - Yes
-        - No
+        - 'yes'
+        - 'no'
     validations:
       required: true
 
@@ -94,8 +94,8 @@ body:
       label: Extra antennas
       description: Do you have multiple antennas attached to one Hotspot? If yes, please describe why in the additional information box below.
       options:
-        - Yes
-        - No
+        - 'yes'
+        - 'no'
     validations:
       required: true
 
