--- a/.github/ISSUE_TEMPLATE/request-removal.yaml
+++ b/.github/ISSUE_TEMPLATE/request-removal.yaml
@@ -1,9 +1,9 @@
 
 name: Request Removal from Denylist
-about: Fill out this form to request a Hotspot removal from the denylist
+description: Fill out this form to request a Hotspot removal from the denylist
 title: "[Removal]: "
 labels: ["removal", "triage"]
-assignees: ''
+assignees: []
 body:
   - type: markdown
     attributes:
@@ -57,23 +57,14 @@ body:
     validations:
       required: true
 
-  - type: textarea
-    id: modifications
-    attributes:
-      label: Modifications
-      description: Have you modified your Hotspot in anyway? If yes, please describe the modifications.
-      placeholder: ex. I used to do things that were not for creating coverage but I stopped. Please save me.
-    validations:
-      required: false
-
   - type: dropdown
     id: modifications
     attributes:
       label: Modifications
       description: Have you modified your Hotspot in anyway? If yes, please describe in the additional information box below.
       options:
-        - Yes
-        - No
+        - 'Yes'
+        - 'No'
     validations:
       required: true
 
@@ -83,8 +74,8 @@ body:
       label: Extra forwarders
       description: Are you using one or more extra forwarder(s)? If yes, please describe why in the additional information box below.
       options:
-        - Yes
-        - No
+        - 'Yes'
+        - 'No'
     validations:
       required: true
 
@@ -94,8 +85,8 @@ body:
       label: Extra antennas
       description: Do you have multiple antennas attached to one Hotspot? If yes, please describe why in the additional information box below.
       options:
-        - Yes
-        - No
+        - 'Yes'
+        - 'No'
     validations:
       required: true
 
