Add more files to the release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,8 @@ jobs:
         with:
           files: |
             filter.bin
+            denylist.csv
+            manifest.json
+            public_key.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
