--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,12 @@
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+    tags:
+      - ^[0-9]{10}$
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 name: ci
 
