--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "serial": 2023090101,
+  "report_prefix": "https://shdw-drive.genesysgo.net/AXgEm5r6wUq7guaZYheZBrnQjfDhXY9A2df9vnfv9EoF/",
   "hash": "xizSWSBlEx3YjgYslimRduD03MEbL99P12y5cy54w90=",
   "signatures": [{
   "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
