Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "serial": 2023090701,
+  "report_prefix": "https://shdw-drive.genesysgo.net/A15718r68K9aAPXWaTFtwYwWDMHHGZ2DW6bWmYpRPJBw/",
   "hash": "JznAut3VoxGFqB1qwrW0s2VyJsuAEyIw2wv+9H+fRE4=",
   "signatures": [{
   "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
