--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,13 @@ jobs:
         with:
           repo: helium/xorf-generator
 
+      - name: Get descriptor path
+        id: set_descriptor
+        run: |
+          echo "::set-output name=descriptor_path::$(jq .report_prefix manifest.json)"
+
       - name: Download descriptor
-        run: wget $(grep report_prefix manifest.json | sed -e 's/\"report_prefix\": //' -e 's/"//g' -e 's/,$//')/descriptor.json
+        run: wget ${{steps.set_descriptor.outputs.descriptor_path}}/descriptor.json
 
       - name: Check manifest
         run: xorf-generator manifest verify
