--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           echo "::set-output name=serial::$(jq .serial manifest.json)"
 
       - name: Download descriptor
-        run: wget ${{steps.set_descriptor.outputs.descriptor_path}}descriptor.json
+        run: wget ${{steps.set_descriptor.outputs.descriptor_path}}descriptor.bin
 
       - name: Generate signing data
         run: xorf-generator data generate --serial ${{steps.set_serial.outputs.serial}}
