--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,12 @@ jobs:
       - name: Get descriptor path
         id: set_descriptor
         run: |
-          echo "::set-output name=descriptor_path::$(jq .report_prefix manifest.json)"
+          echo "descriptor_path=$(jq .report_prefix manifest.json)"  >> $GITHUB_ENV
 
       - name: Get serial
         id: set_serial
         run: |
-          echo "::set-output name=serial::$(jq .serial manifest.json)"
+          echo "serial=$(jq .serial manifest.json)" >> $GITHUB_ENV
 
       - name: Download descriptor
         run: wget ${{steps.set_descriptor.outputs.descriptor_path}}descriptor.bin
