--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "serial": 2023100501,
+  "report_prefix": "https://shdw-drive.genesysgo.net/EfbthUQtshuaZdpoPZfDi3688KJKv5uk8PWRKZ8C1kcY/",
   "hash": "u+t4HXOnw5TpCL3HQkjvEohpYBKV0ZgDbSkXRAl9nls=",
   "signatures": [
     {
