Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "serial": 2023100801,
+  "report_prefix": "https://shdw-drive.genesysgo.net/8oTShhJYodzZ6pDzC2JBYPGpyoJ4MPLWZmJ8rJN8swv5/",
   "hash": "YV0xfPDwXdboRlyGGGW74ymgwZKkG2kXzbZhwDp9bJU=",
   "report_prefix": "https://shdw-drive.genesysgo.net/8oTShhJYodzZ6pDzC2JBYPGpyoJ4MPLWZmJ8rJN8swv5/",
   "signatures": [
