--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           echo "serial=$(jq .serial manifest.json)" >> $GITHUB_ENV
 
       - name: Download descriptor
-        run: wget ${{env.descriptor_path}}descriptor.bin
+        run: wget ${{env.descriptor_path}}descriptor.bin.gz
 
       - name: Generate signing data
         run: xorf-generator data generate --serial ${{env.serial}}
