--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2023100801,
   "hash": "YV0xfPDwXdboRlyGGGW74ymgwZKkG2kXzbZhwDp9bJU=",
+  "report_prefix": "https://shdw-drive.genesysgo.net/8oTShhJYodzZ6pDzC2JBYPGpyoJ4MPLWZmJ8rJN8swv5/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
