Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2023110601,
   "hash": "Ir751QUBaciOJTvXuiXYBcpqPPrLIJv35JRzJgZEEk4=",
+  "report_prefix": "https://shdw-drive.genesysgo.net/fX7cUtrDRtzYwkThp74cHB97wzYKGmNJ7yZgGRbx37E/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
