Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2024031801,
   "hash": "7HfjXguG+T/RoX9Fp0oXWMRBjvSuSdy1UdpvxgufhrE=",
+   "report_prefix": "https://shdw-drive.genesysgo.net/4mFLW9xC2rZkyBxHj4YSQPrstDQNUjoPgGvmZwyyhLHt/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
