Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2024032501,
   "hash": "m5+/sQe3c9/j9dCOAMoq3Dlh11nTolBzGyhHuqWqCMU=",
+  "report_prefix": "https://shdw-drive.genesysgo.net/HxUnMCVMcQUxDeLELtS6wC7AWXjEnT11VeTiRR3s1Chq/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
