Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2024040101,
   "hash": "6GS9MBi040I9nXqgNY3xv0IaktzKBgHgyJ9rzj9zvp0=",
+  "report_prefix": "https://shdw-drive.genesysgo.net/AXouGkWk5HpnyTLDm3zfBh8p69JQLqbvCJA9jegz7Xjt/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
