add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2024041501,
   "hash": "pXwYL5oCRl+LeQGAEJxYKzW6p5mtrDkdsKKOK8cKMiQ=",
+  "report_prefix": "https://shdw-drive.genesysgo.net/AZnpDzNnz9XNWMksRbKPUEZQEbiMQeJjJHerZcpsCT2Q/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
