--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2024042201,
   "hash": "iL7dQ1qjGk95Mxorz+V6dwaigxRkXT5O0m1Vp3px+rU=",
+  "report_prefix": "https://shdw-drive.genesysgo.net/4X62vNgfFuzoAp9nnr4yiGUgsoC2oYTB7zt7n2rGGNo9/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
