Add report prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "serial": 2024070801,
   "hash": "8tBQCeKpaP5LtH6Rg3+3tIYd4ZQS1oOzjQrftdZDNfo=",
+   "report_prefix": "https://shdw-drive.genesysgo.net/7MnZQEKbpjiQWjSSgBVURpGgwppEC2FcAouAGifkJJLK/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
