--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "serial": 2025040701,
   "hash": "23ctld8l4tdqNiAf28OHDEQ1xJ1SSDE89hqJ5JWqK1U=",
-  "report_prefix": "https://shdw-drive.genesysgo.net/CqMU5H2wNoXNWTacnu6TCZEAqLaFt7kaxct38oa1hFn/",
+  "report_prefix": "https://helium-mainnet-iot-denylist-report-cards.s3-us-west-2.amazonaws.com/20250408/",
   "signatures": [
     {
       "address": "13hSNQ6KDnFcG8zKJg79HFcKNPcqg4f4hSnxaSjpUsyh7UAvRak",
